src/cmd/vet/testdata/testingpkg/tests_test.go
package testdata

func Example_BadSuffix() {} // ERROR "Example_BadSuffix has malformed example suffix: BadSuffix"
